fix img size on mobile screen

--- a/src/modules/HomePage/Intro/styles.module.scss
+++ b/src/modules/HomePage/Intro/styles.module.scss
@@ -25,4 +25,11 @@
       column-gap: 25px;
     }
   }
+
+  .intro__devices__item__icon {
+    @media (max-width: 768px) {
+      width: 50px;
+      height: 50px;
+    }
+  }
 }
